# knoq

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kb/: __init__.py  __main__.py  cli.py  db.py  markdown.py  mcp_server.py  models.py  paths.py  repository.py  search.py
src/knoq/: __init__.py  __main__.py  cli.py  context.py  db.py  markdown.py  mcp_server.py  paths.py  repository.py  search.py
src/knoq/utils/: console.py
tests/: conftest.py  test_cli.py  test_db.py  test_markdown.py  test_mcp_server.py  test_paths.py  test_repository.py  test_search.py
