[project]
name = "knoq"
version = "0.1.0"
description = "面向仓库的本地 CLI 知识账本 — knowledge + cli"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "rich>=14.0.0",
]

[project.scripts]
knoq = "knoq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knoq"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
