[project]
name = "knoq"
version = "0.1.0"
description = "面向仓库的本地 CLI 知识账本 — knowledge + cli"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "FrozenYears" }]
keywords = ["cli", "knowledge-base", "ai-agent", "mcp", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/FrozenYears/knoq"
Repository = "https://github.com/FrozenYears/knoq"
Issues = "https://github.com/FrozenYears/knoq/issues"

[project.scripts]
knoq = "knoq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knoq"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
